--- a/app/views/generations/show.html.erb
+++ b/app/views/generations/show.html.erb
@@ -1,11 +1,3 @@
-<%= turbo_frame_tag dom_id(@generation), class: 'w-full m-auto' do %>
-  <div class="w-auto flex flex-col">
-    <% @generation.cells.in_groups_of(@generation.world_width).each do |cells| %>
-      <div class="flex flex-row">
-        <% cells.each do |cell| %>
-          <div id="<%= dom_id(cell) %>" class="w-full aspect-square flex-1 <%= cell.alive? ? 'bg-slate-700' : 'bg-white' %> rounded-md shadow focus:outline-none"></div>
-        <% end %>
-      </div>
-    <% end %>
-  </div>
-<% end %>
+<%= render 'world', generation: @generation %>
+
+<%= turbo_stream_from @generation %>
