add sample generation file

--- a/app/views/simulations/new.html.erb
+++ b/app/views/simulations/new.html.erb
@@ -8,7 +8,7 @@
   <div>
     <p class="mt-2 text-sm text-gray-600">
       Se hai difficoltà
-      <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">usa questo file di esempio</a>
+      <a href="<%= asset_path('example_generation.txt') %>" class="font-medium text-indigo-600 hover:text-indigo-500" download="sample.txt">usa questo file di esempio</a>
     </p>
   </div>
 
