--- a/app/views/simulations/new.html.erb
+++ b/app/views/simulations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="mx-auto max-w-3xl sm:px-6 lg:px-8">
+<div class="mx-auto max-w-3xl px-4 sm:px-6 lg:px-8">
 
   <div>
     <h1 class="text-4xl font-bold text-gray-900">Benvenuto!</h1>
