--- a/app/views/simulations/show.html.erb
+++ b/app/views/simulations/show.html.erb
@@ -1,9 +1,9 @@
-<div class="mx-auto max-w-4xl sm:px-6 lg:px-8">
+<div class="mx-auto sm:max-w-4xl px-4 sm:px-6 lg:px-8">
   <div>
     <%= render 'show_header', simulation: @simulation %>
   </div>
 
-  <div id="<%= dom_id(@simulation) %>" class="flex my-10">
+  <div id="<%= dom_id(@simulation) %>" class="sm:flex my-4 sm:my-10">
     <%= turbo_frame_tag dom_id(@simulation.latest_generation),
                         src: polymorphic_path([@simulation, @simulation.latest_generation]),
                         class: 'flex-1 mr-4' do %>
