add logic for mobile sidebar interaction

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="h-full">
+  <body class="h-full" data-controller="navigation-sidebar">
     <%= render 'shared/navigation' %>
 
     <!-- Main Content -->
